# thrift-cpp-python-interop

./: README.md
cpp_library/: CMakeLists.txt
cpp_library/src/: CMakeLists.txt
cpp_library/src/thrift/: service.thrift
python_library/: CMakeLists.txt  tcpi-python-types.i  yarp_import.i
samples/cpp-client/: CMakeLists.txt
samples/cpp-client/src/: main.cpp
samples/cpp-server/: CMakeLists.txt
samples/cpp-server/include/: ServiceImplementation.h
samples/cpp-server/src/: ServiceImplementation.cpp  main.cpp
samples/python-client/: client.py
samples/python-server/: server.py  service_implementation.py
